--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,13 +8,19 @@
     android:gravity="center"
     tools:context=".ui.login.LoginActivity">
 
-
-    <ImageView
+    <LinearLayout
         android:layout_width="301dp"
         android:layout_height="179dp"
+        android:id="@+id/logologin"
+
+        >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="40dp"
         android:src="@drawable/logo"
          />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -69,24 +75,21 @@
     </LinearLayout>
 
 
-
-
     <Button
         android:id="@+id/loginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/log_in"
         android:layout_marginTop="10dp"
         android:drawableEnd="@drawable/ic_login"
-
         android:fontFamily="@font/google_sans_bold"
-        />
+
+        android:text="@string/log_in" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="50dp"
         android:text="@string/register_text"
 
         />
