--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,12 @@
             tools:context=".ui.home.HomeFragment"
             android:orientation="vertical">
 
+                <Button android:layout_height="wrap_content"
+                     android:layout_width="match_parent"
+                    android:text="Console"
+                    android:id="@+id/consoleBtn">
+
+                </Button>
                 <LinearLayout android:layout_height="wrap_content"
 
                     android:layout_width="match_parent"
