--- a/app/src/main/res/menu/toolbar_routine.xml
+++ b/app/src/main/res/menu/toolbar_routine.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_fav"
+
         android:title="@string/action_fav"
-        android:icon="@drawable/ic_favs"
+        android:icon="@drawable/ic_yes_fav"
         app:showAsAction="ifRoom"/>
 
     <item
