--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -33,13 +33,13 @@
 
 
     <RatingBar
-        android:id="@+id/ratingBar"
+        android:id="@+id/reviewScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/reviewText"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:background="#E8E8E8"
