--- a/app/src/main/res/layout/routine_execution.xml
+++ b/app/src/main/res/layout/routine_execution.xml
@@ -11,7 +11,7 @@
         android:id="@+id/cycleLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple_200"
+        android:background="@color/highlightColor"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="10dp"
@@ -72,7 +72,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
-        app:cardBackgroundColor="#009688"
+        app:cardBackgroundColor="@color/exCardColor"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
@@ -164,7 +164,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:background="@color/purple_200"
+        android:background="@color/highlightColor"
         android:gravity="center"
         android:orientation="horizontal"
 
