--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -59,7 +59,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/code"
-        app:layout_constraintVertical_bias="0.199" />
+        app:layout_constraintVertical_bias="0.199"
+        android:backgroundTint="@color/secondaryTextColor"/>
 
     <EditText
         android:id="@+id/email"
