--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,7 @@
         android:layout_marginTop="10dp"
         android:drawableEnd="@drawable/ic_login"
         android:fontFamily="@font/google_sans_bold"
-
+        android:backgroundTint="@color/secondaryTextColor"
         android:text="@string/log_in" />
 
     <TextView
