--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -127,6 +127,7 @@
         android:layout_marginTop="36dp"
         android:fontFamily="@font/google_sans_bold"
         android:text="@string/register"
+        android:backgroundTint="@color/secondaryTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password2" />
