--- a/app/src/main/res/layout/activity_scheduler.xml
+++ b/app/src/main/res/layout/activity_scheduler.xml
@@ -37,58 +37,58 @@
                 android:id="@+id/checkBox_mon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/purple_200"
+                android:buttonTint="@color/secondaryTextColor"
                 android:text="Monday"
-                android:textColor="@color/purple_200" />
+                android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
                 android:id="@+id/checkBox_tue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/purple_200"
+                android:buttonTint="@color/secondaryTextColor"
                 android:text="Tuesday"
-                android:textColor="@color/purple_200" />
+                android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
                 android:id="@+id/checkBox_wed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/purple_200"
+                android:buttonTint="@color/secondaryTextColor"
                 android:text="Wednesday"
-                android:textColor="@color/purple_200" />
+                android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
                 android:id="@+id/checkBox_thu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/purple_200"
+                android:buttonTint="@color/secondaryTextColor"
                 android:text="Thursday"
-                android:textColor="@color/purple_200" />
+                android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
                 android:id="@+id/checkBox_fri"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/purple_200"
+                android:buttonTint="@color/secondaryTextColor"
                 android:text="Friday"
-                android:textColor="@color/purple_200" />
+                android:textColor="@color/secondaryTextColor" />
 
 
             <CheckBox
                 android:id="@+id/checkBox_sat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/purple_200"
+                android:buttonTint="@color/secondaryTextColor"
                 android:text="Saturday"
-                android:textColor="@color/purple_200" />
+                android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
                 android:id="@+id/checkBox_sun"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:buttonTint="@color/purple_200"
+                android:buttonTint="@color/secondaryTextColor"
                 android:text="Sunday"
-                android:textColor="@color/purple_200" />
+                android:textColor="@color/secondaryTextColor" />
         </LinearLayout>
 
 
@@ -97,8 +97,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:background="#F1FBF7"
-            android:headerBackground="@color/purple_200" />
+            android:background="@color/whiteTextColor"
+            android:headerBackground="@color/secondaryTextColor" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -115,7 +115,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:backgroundTint="#AE1212"
+                android:backgroundTint="@color/logoutColor"
                 android:text="Cancel" />
 
             <View
