--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/secondaryTextColor"
             app:popupTheme="@style/Theme.NavDrawer.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
