--- a/app/src/main/res/layout/classic_divider.xml
+++ b/app/src/main/res/layout/classic_divider.xml
@@ -4,7 +4,7 @@
     android:layout_marginBottom="10dp"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
-    android:background="@color/colorAccent"
+    android:background="@color/primaryTextColor"
     android:layout_height="4dp" android:layout_width="match_parent"
     >
 
