--- a/app/src/main/res/layout/exercise_list_item.xml
+++ b/app/src/main/res/layout/exercise_list_item.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="12dp"
         android:gravity="center"
         android:padding="8dp"
-        app:cardBackgroundColor="@color/teal_200"
+        app:cardBackgroundColor="@color/primaryTextColor"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
