--- a/app/src/main/res/layout/home_sections_divider.xml
+++ b/app/src/main/res/layout/home_sections_divider.xml
@@ -10,7 +10,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:background="#1DDAD0"
+        android:background="@color/primaryTextColor"
         android:layout_height="8dp"
         android:layout_width="wrap_content"
 
