--- a/app/src/main/res/layout/routine_execution_alt.xml
+++ b/app/src/main/res/layout/routine_execution_alt.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="12dp"
         android:gravity="center"
         android:padding="8dp"
-        app:cardBackgroundColor="@color/teal_200"
+        app:cardBackgroundColor="@color/primaryTextColor"
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp"
         app:layout_constraintTop_toBottomOf="@+id/currentTitle">
