--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/purple_200</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/itemTextColor</item>
+        <item name="colorAccent">@color/highlightColor</item>
         <item name="android:fontFamily">@font/google_sans</item>
     </style>
     <style name="AppTheme.NoActionBar">
@@ -15,12 +15,12 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
     <style name="viewParent.headerText">
-        <item name="android:textColor">@color/contentTextColor</item>
+        <item name="android:textColor">@color/itemTextColor</item>
         <item name="android:textSize">@dimen/headerTextSize</item>
         <item name="android:textStyle">bold</item>
     </style>
     <style name="viewParent.headerText.NoMode">
-        <item name="android:textColor">@color/darkTextColor</item>
+        <item name="android:textColor">@color/itemTextColor</item>
     </style>
     <style name="parent">
         <item name="android:layout_width">match_parent</item>
@@ -37,7 +37,7 @@
     </style>
     <style name="spinnerHintText" parent="parent">
         <item name="android:textSize">@dimen/newsMoreTextSize</item>
-        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:paddingLeft">5dp</item>
     </style>
     <style name="routineActivity" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
@@ -54,7 +54,7 @@
         </item>
     </style>
     <style name="RatingBar" parent="Theme.AppCompat">
-        <item name="colorControlNormal">#E90909</item>
+        <item name="colorControlNormal">@color/logoutColor</item>
         <item name="colorControlActivated">@color/white</item>
     </style>
     <style name="RatingBar2" parent="Theme.AppCompat">
@@ -69,7 +69,7 @@
         <item name="android:textSize">17sp</item>
     </style>
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
-        <item name="android:colorBackground">@color/purple_200</item>
+        <item name="android:colorBackground">@color/highlightColor</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorPrimary">@color/black</item>
     </style>
