--- a/app/src/main/res/drawable-anydpi/ic_play_white.xml
+++ b/app/src/main/res/drawable-anydpi/ic_play_white.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#333333"
-    android:alpha="0.6">
+    android:tint="#FFFFFF"
+    android:alpha="0.9">
   <path
       android:pathData="M8,5v14l11,-7z"
       android:fillColor="#FFFFFF"/>
