--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:text="Rutina"
+                android:text="@string/routine"
                 android:textAppearance="?attr/textAppearanceHeadline4"
                 android:textStyle="bold" />
 
@@ -111,7 +111,7 @@
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/secondaryTextColor"
 
-                        android:text="Review">
+                        android:text="@string/review">
 
                     </Button>
                 </LinearLayout>
@@ -125,7 +125,7 @@
                 android:layout_marginLeft="5dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:text="Dificil"
+                android:text="@string/hard"
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 android:textStyle="italic"
                 android:visibility="gone" />
