--- a/app/src/main/res/layout/activity_scheduler.xml
+++ b/app/src/main/res/layout/activity_scheduler.xml
@@ -22,7 +22,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:textStyle="bold"
-            android:text="When are you playing this routine?"
+            android:text="@string/when"
             android:textSize="18sp" />
 
         <LinearLayout
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/secondaryTextColor"
-                android:text="Monday"
+                android:text="@string/monday"
                 android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/secondaryTextColor"
-                android:text="Tuesday"
+                android:text="@string/Tuesday"
                 android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
@@ -54,7 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/secondaryTextColor"
-                android:text="Wednesday"
+                android:text="@string/wednesday"
                 android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
@@ -62,7 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/secondaryTextColor"
-                android:text="Thursday"
+                android:text="@string/thursday"
                 android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
@@ -70,7 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/secondaryTextColor"
-                android:text="Friday"
+                android:text="@string/friday"
                 android:textColor="@color/secondaryTextColor" />
 
 
@@ -79,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/secondaryTextColor"
-                android:text="Saturday"
+                android:text="@string/saturday"
                 android:textColor="@color/secondaryTextColor" />
 
             <CheckBox
@@ -87,7 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/secondaryTextColor"
-                android:text="Sunday"
+                android:text="@string/sunday"
                 android:textColor="@color/secondaryTextColor" />
         </LinearLayout>
 
@@ -116,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="@color/logoutColor"
-                android:text="Cancel" />
+                android:text="@string/cancel" />
 
             <View
                 android:layout_width="0dp"
@@ -128,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Accept" />
+                android:text="@string/accept" />
 
             <View
                 android:layout_width="0dp"
