--- a/app/src/main/res/layout/cycle_list_item.xml
+++ b/app/src/main/res/layout/cycle_list_item.xml
@@ -31,7 +31,7 @@
                     android:id="@+id/cycleName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Cycle"
+                    android:text="@string/cycle"
                     android:textAppearance="?attr/textAppearanceHeadline6" />
 
                 <ImageView
