--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -23,7 +23,6 @@
         android:id="@+id/usernameReview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_gravity="center"
 
         android:layout_marginBottom="16dp"
@@ -42,7 +41,7 @@
         android:id="@+id/reviewText"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="#C3E3F1"
         android:gravity="top|start"
         android:hint="@string/share_details_of_your_own_experience"
         android:inputType="textMultiLine"
