--- a/app/src/main/res/layout/cycle_list_item.xml
+++ b/app/src/main/res/layout/cycle_list_item.xml
@@ -21,11 +21,13 @@
             android:layout_height="wrap_content">
 
             <RelativeLayout
+                android:id="@+id/collapsedRelLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:id="@+id/collapsedRelLayout"
-                >
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp">
 
                 <TextView
                     android:id="@+id/cycleName"
@@ -33,6 +35,19 @@
                     android:layout_height="wrap_content"
                     android:text="@string/cycle"
                     android:textAppearance="?attr/textAppearanceHeadline6" />
+
+                <TextView
+                    android:id="@+id/cycleReps"
+                    android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@id/expandCycle"
+                    android:text="x4"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:layout_marginRight="10dp"
+                    >
+
+                </TextView>
+
 
                 <ImageView
                     android:id="@+id/expandCycle"
