--- a/app/src/main/res/layout/routine_execution.xml
+++ b/app/src/main/res/layout/routine_execution.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".ui.routines.execution.RoutineExecutionActivity">
 
+
     <LinearLayout
         android:id="@+id/cycleLayout"
         android:layout_width="match_parent"
@@ -14,8 +15,29 @@
         android:background="@color/highlightColor"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="10dp"
+        android:padding="5dp"
         app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/top"
+            android:layout_gravity="fill_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+
+            <ImageView
+                android:id="@+id/closeBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_close"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+            </ImageView>
+
+        </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -24,18 +46,7 @@
 
             >
 
-            <ImageView
-                android:id="@+id/closeBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="10dp"
 
-                android:src="@drawable/ic_close"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-            </ImageView>
 
             <TextView
                 android:id="@+id/cycleName"
