--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyGymApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MyGymApp" parent="Base.Theme.MyGymApp">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/highlightColor</item>
         <item name="colorPrimaryVariant">@color/secondaryTextColor</item>
