--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyGymApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-
+    <style name="Theme.MyGymApp" parent="Base.Theme.MyGymApp">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/highlightColor</item>
         <item name="colorPrimaryVariant">@color/secondaryTextColor</item>
@@ -12,6 +11,12 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Customize your theme here. -->
+        <item name="android:fontFamily">@font/google_sans</item>
+    </style>
+
+    <style name="Base.Theme.MyGymApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:forceDarkAllowed" tools:targetApi="q">true</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/google_sans</item>
     </style>
