close queue execution

--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -61,6 +61,7 @@
             android:padding="14dp">
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/rName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
