--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -95,8 +95,7 @@
                     android:layout_weight="0"
                     android:numStars="5"
                     android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:theme="@style/RatingBar2" />
+                    android:paddingBottom="5dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
