--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -41,7 +41,7 @@
         android:id="@+id/reviewText"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:background="#C3E3F1"
+        android:background="@color/boxColor"
         android:gravity="top|start"
         android:hint="@string/share_details_of_your_own_experience"
         android:inputType="textMultiLine"
