--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,4 +10,5 @@
     <color name="addPicColor">#00BCD4</color>
     <color name="itemTextColor">#000</color>
     <color name="logoutColor">#F44336</color>
+    <color name="boxColor">#937AB6</color>
 </resources>
