--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -111,7 +111,8 @@
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/secondaryTextColor"
 
-                        android:text="@string/review">
+                        android:text="@string/review"
+                        android:textColor="@color/white">
 
                     </Button>
                 </LinearLayout>
